flex(exercise 5): Fix spacing

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -80,15 +80,13 @@ button.cancel {
   gap: 1rem;
 }
 
-.header {
+.header,
+h1 {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-}
-
-h1 {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
   margin: 0;
 }
